--- a/views/reset-password.ejs
+++ b/views/reset-password.ejs
@@ -63,9 +63,9 @@ h2{
         <h1> Reset password for <%= email %> </h1>
 
         <form  action="" method="post" >
-           <h4>Password</h4> 
+           <h4> New Password</h4> 
             <input type="text" name="password">
-            <h4> Confirm Password</h4> 
+            <h4> Confirm New Password</h4> 
             <input type="text" name="confirmPassword">
             <input type="submit"  value="reset password">
 
